--- a/Camera1APITest/app/src/main/res/layout/activity_main.xml
+++ b/Camera1APITest/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,163 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <FrameLayout
+        android:id="@+id/fl_txv_and_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- SurfaceView Goes here -->
+
+        <ImageView
+            android:id="@+id/iv_capture_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+
+    <!-- Top Icons - Visible whenever in capture mode -->
+
+    <RelativeLayout
+        android:id="@+id/rl_top_icons"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_alignParentTop="true">
+
+        <Button
+            android:id="@+id/btn_exit_camera"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_exit_to_app_white_24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:alpha="0.5"/>
+
+    </RelativeLayout>
+
+    <!-- Middle icons - Drop Picture or Proceed Picture -->
+
+    <RelativeLayout
+        android:id="@+id/rl_cancel_picture"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/v_circle_shape_cancel_pic"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/ic_close_white_24dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+
+        <View
+            android:id="@+id/v_pic_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/circle_shape_cancel"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_approve_pic"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/v_circle_shape_approve_pic"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/ic_check_white_24dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+
+        <View
+            android:id="@+id/v_pic_approve"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/circle_shape_approve"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:alpha="0.8"/>
+
+    </RelativeLayout>
+
+    <!-- Bottom Icons. Hide when picture is captured -->
+
+    <RelativeLayout
+        android:id="@+id/rl_bottom_icons"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp">
+
+        <Button
+            android:id="@+id/btn_flash_mode"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_flash_off_white_24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="56dp"
+            android:layout_marginStart="56dp"
+            android:alpha="0.8"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_circular_capture_btn"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_centerHorizontal="true">
+
+            <View
+                android:id="@+id/v_circle_shape"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/ic_camera_alt_white_36dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
+
+            <View
+                android:id="@+id/v_pic_capture"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/circle_shape_capture"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/btn_camera_switch"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_camera_front_white_24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="56dp"
+            android:layout_marginEnd="56dp"
+            android:alpha="0.8"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
