--- a/Camera1APITest/app/src/main/res/values/colors.xml
+++ b/Camera1APITest/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D50000</color>
+    <color name="button_background">#4C000000</color>
+    <color name="material_blue_30">#4C3F51B5</color>
+    <color name="dark_material_red_30">#4CD50000</color>
+    <color name="dark_material_green_30">#4C1B5E20</color>
 </resources>
