--- a/Camera1APITest/app/src/main/res/layout/activity_main.xml
+++ b/Camera1APITest/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
 
         <!-- SurfaceView Goes here -->
 
-        <SurfaceView
-            android:id="@+id/sv_activity_main"
+        <FrameLayout
+            android:id="@+id/fl_camera_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
