Revamped code and found out some issue related to having the preview freezing after an onPause() followed by an onResume(). A FrameLayout or some ViewGroup is absolutely needed over a SurfaceView because the ViewGroups needs to have any child views removed before the application is paused.

--- a/Camera1APITest/app/src/main/res/layout/activity_main.xml
+++ b/Camera1APITest/app/src/main/res/layout/activity_main.xml
@@ -5,18 +5,9 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/fl_sv_camera_preview"
+        android:id="@+id/fl_camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- SurfaceView Goes here -->
-
-        <SurfaceView
-            android:id="@+id/sv_camera_preview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </FrameLayout>
+        android:layout_height="match_parent"/>
 
     <!-- Top Icons - Visible whenever in capture mode -->
 
